--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -8,4 +8,4 @@ id = "99441bb3257c43f9bbfb04560c94ad94"
 
 [vars]
 DAILY_NEW_TICKER_CAP = "25"
-SEC_USER_AGENT = "ValueCheck/1.0 (contact: you@example.com)"
+SEC_USER_AGENT = "ValueCheck/1.0 (contact:Piyushhh01@gmail.com)"
